Create the clusterization model

--- a/model/book_searcher.ipynb
+++ b/model/book_searcher.ipynb
@@ -17,6 +17,7 @@
     "import numpy as np\n",
     "import jax\n",
     "\n",
+    "os.environ[\"TRANSFORMERS_NO_TF\"] = \"1\"\n",
     "from transformers import pipeline"
    ],
    "outputs": [],
